Final commit; fixed line spacing in header, changed img src to relative path, centered image of flatiron building.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,16 +19,20 @@ h3 {
   font-weight: bold;
 }
 
+nav {
+  line-height: 200%;
+}
+
 p {
   font-size: 14px;
 }
 
 .header {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  background: url(../media/the-flatiron-building.png) center;
 }
 
 #bottom {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  background: url(../media/the-flatiron-building.png) center;
   font-size: 23px;
   color: white;
 }
@@ -39,7 +43,6 @@ a {
 }
 
 .header-nav {
-  font-size: 18px;
   font-weight: bold;
 }
 
